base/005-crossdataset-rule/fuse-005-crossdataset-rule-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: crossdataset-rule
  name: crossdataset-rule
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: crossdataset-rule
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: crossdataset-rule
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-crossdataset-rule:development"
          name: crossdataset-rule
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
            - name: grpc-port
              containerPort: 10000
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
